[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/characters/basic_character.tres" type="Resource" id=1]
[ext_resource path="res://assets/Fonts/resources/generic_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ui/animation_selector.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/MainPanel.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/CharacterList.gd" type="Script" id=5]
[ext_resource path="res://assets/Fonts/resources/generic_label.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Theme" id=3]
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 2 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[node name="Container" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Characters" type="Panel" parent="."]
anchor_right = 0.25
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Characters"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Characters/ScrollContainer"]
margin_right = 480.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_Panel" type="PanelContainer" parent="."]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
character_template = ExtResource( 1 )

[node name="character_stage" type="Control" parent="Main_Panel"]
margin_right = 960.0
margin_bottom = 1080.0

[node name="pivot" type="Control" parent="Main_Panel/character_stage"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character_preview" type="AnimatedSprite" parent="Main_Panel/character_stage/pivot"]
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
playing = true

[node name="info_container" type="Control" parent="Main_Panel"]
margin_right = 960.0
margin_bottom = 1080.0

[node name="name_container" type="Control" parent="Main_Panel/info_container"]
anchor_left = 0.47
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 0.106
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="Main_Panel/info_container/name_container"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "The absolute mad lad"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats_container" type="VBoxContainer" parent="Main_Panel/info_container"]
anchor_left = 0.6
anchor_top = 0.15
anchor_right = 0.98
anchor_bottom = 0.28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_label" type="Label" parent="Main_Panel/info_container/stats_container"]
margin_right = 364.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="Main_Panel/info_container/stats_container/health_label"]
anchor_right = 1.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_label" type="Label" parent="Main_Panel/info_container/stats_container"]
margin_top = 34.0
margin_right = 364.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 6 )
text = "Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage" type="Label" parent="Main_Panel/info_container/stats_container/damage_label"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range_label" type="Label" parent="Main_Panel/info_container/stats_container"]
margin_top = 68.0
margin_right = 364.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 6 )
text = "Range"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range" type="Label" parent="Main_Panel/info_container/stats_container/range_label"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range_radius_label" type="Label" parent="Main_Panel/info_container/stats_container"]
margin_top = 102.0
margin_right = 364.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 6 )
text = "Range Radius"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range_radius" type="Label" parent="Main_Panel/info_container/stats_container/range_radius_label"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug_container" type="Control" parent="Main_Panel"]
margin_right = 960.0
margin_bottom = 1080.0

[node name="animation_options" type="OptionButton" parent="Main_Panel/debug_container"]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.75
theme = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Animations"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
